corrected the exisiting test case and verified it