@@ -2,7 +2,7 @@ package org.ikigaidigital;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -10,11 +10,11 @@ public class TimeDepositCalculatorTest {
     @Test
     public void updateBalance_Test() {
         TimeDepositCalculator calc = new TimeDepositCalculator();
-        List<TimeDeposit> plans = Arrays.asList(
-            new TimeDeposit(1,"basic", 1234567.00, 45)
-        );
+        TimeDeposit basic = new TimeDeposit(1, "basic", 1234567.00, 45);
+
+        List<TimeDeposit> plans = List.of(basic);
         calc.updateBalance(plans);
 
-        assertThat(1).isEqualTo(1);
+        assertThat(basic.getBalance()).isEqualTo(1235595.81);
     }
 }
